[gd_scene load_steps=72 format=3 uid="uid://62t2005fchbn"]

[ext_resource type="Script" path="res://scripts/character/character.gd" id="1_t3rb3"]
[ext_resource type="Texture2D" uid="uid://b253el4yq1vy8" path="res://sprites/characters/zidane/entrance.png" id="3_wseqo"]
[ext_resource type="AudioStream" uid="uid://c3seaau4f0sdo" path="res://audio/hit1.wav" id="4_7ve4u"]
[ext_resource type="Texture2D" uid="uid://6xh8lkvaqr83" path="res://sprites/characters/zidane/Zidane Final Spritesheet copy.png" id="5_cgt00"]
[ext_resource type="AudioStream" uid="uid://d3ewpmd067n2e" path="res://audio/swing1.wav" id="5_huqtv"]
[ext_resource type="AudioStream" uid="uid://b2ja84lka7c00" path="res://audio/block2.wav" id="6_wpehk"]
[ext_resource type="AudioStream" uid="uid://dlw2cg3qghboe" path="res://audio/hit2.wav" id="7_7aj4a"]
[ext_resource type="Script" path="res://scripts/fsm/state_machine.gd" id="8_plq82"]
[ext_resource type="Script" path="res://scripts/character/character_state_idle.gd" id="9_kp4xi"]
[ext_resource type="Script" path="res://scripts/character/character_state_walk.gd" id="10_c1ka5"]
[ext_resource type="Script" path="res://scripts/character/character_state_jump.gd" id="11_2r3eh"]
[ext_resource type="Script" path="res://scripts/character/character_state_block.gd" id="12_4nn4g"]
[ext_resource type="Script" path="res://scripts/character/character_state_attack.gd" id="13_1hpw7"]
[ext_resource type="Script" path="res://scripts/character/character_state_stun.gd" id="14_iqjit"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2op1a"]
atlas = ExtResource("5_cgt00")
region = Rect2(0, 2560, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l2up"]
atlas = ExtResource("5_cgt00")
region = Rect2(160, 2560, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8c4j"]
atlas = ExtResource("5_cgt00")
region = Rect2(320, 2560, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg1ah"]
atlas = ExtResource("5_cgt00")
region = Rect2(480, 2560, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7ofi"]
atlas = ExtResource("5_cgt00")
region = Rect2(640, 2560, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh1xt"]
atlas = ExtResource("5_cgt00")
region = Rect2(800, 2560, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jmu8"]
atlas = ExtResource("5_cgt00")
region = Rect2(960, 2560, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ms1b"]
atlas = ExtResource("5_cgt00")
region = Rect2(0, 4800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_oojpq"]
atlas = ExtResource("5_cgt00")
region = Rect2(160, 4800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ohph"]
atlas = ExtResource("5_cgt00")
region = Rect2(320, 4800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1gs0"]
atlas = ExtResource("5_cgt00")
region = Rect2(480, 4800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx8fb"]
atlas = ExtResource("5_cgt00")
region = Rect2(640, 4800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_860u1"]
atlas = ExtResource("5_cgt00")
region = Rect2(0, 1600, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_noaea"]
atlas = ExtResource("5_cgt00")
region = Rect2(160, 1600, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi56v"]
atlas = ExtResource("5_cgt00")
region = Rect2(320, 1600, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jif1"]
atlas = ExtResource("5_cgt00")
region = Rect2(480, 1600, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp83o"]
atlas = ExtResource("5_cgt00")
region = Rect2(0, 1440, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_jllmj"]
atlas = ExtResource("5_cgt00")
region = Rect2(160, 1440, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vfo0"]
atlas = ExtResource("5_cgt00")
region = Rect2(320, 1440, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlb02"]
atlas = ExtResource("5_cgt00")
region = Rect2(480, 1440, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_i24l4"]
atlas = ExtResource("5_cgt00")
region = Rect2(640, 1440, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjvn2"]
atlas = ExtResource("5_cgt00")
region = Rect2(800, 1440, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1835"]
atlas = ExtResource("5_cgt00")
region = Rect2(0, 640, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8sev"]
atlas = ExtResource("5_cgt00")
region = Rect2(160, 640, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqq4q"]
atlas = ExtResource("5_cgt00")
region = Rect2(320, 640, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sgd0"]
atlas = ExtResource("5_cgt00")
region = Rect2(480, 640, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_7txfn"]
atlas = ExtResource("5_cgt00")
region = Rect2(640, 640, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwxem"]
atlas = ExtResource("5_cgt00")
region = Rect2(800, 640, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fppm"]
atlas = ExtResource("5_cgt00")
region = Rect2(960, 640, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppq0x"]
atlas = ExtResource("5_cgt00")
region = Rect2(0, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_jer86"]
atlas = ExtResource("5_cgt00")
region = Rect2(160, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_omh12"]
atlas = ExtResource("5_cgt00")
region = Rect2(320, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8yk8"]
atlas = ExtResource("5_cgt00")
region = Rect2(480, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vw2l"]
atlas = ExtResource("3_wseqo")
region = Rect2(0, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_wggi7"]
atlas = ExtResource("3_wseqo")
region = Rect2(160, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_6w28w"]
atlas = ExtResource("3_wseqo")
region = Rect2(320, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrt1g"]
atlas = ExtResource("3_wseqo")
region = Rect2(480, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_di0kb"]
atlas = ExtResource("3_wseqo")
region = Rect2(640, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jo46"]
atlas = ExtResource("3_wseqo")
region = Rect2(800, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvpw7"]
atlas = ExtResource("3_wseqo")
region = Rect2(0, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtcbo"]
atlas = ExtResource("3_wseqo")
region = Rect2(160, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lclh"]
atlas = ExtResource("3_wseqo")
region = Rect2(320, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rv8d"]
atlas = ExtResource("3_wseqo")
region = Rect2(480, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_knyoo"]
atlas = ExtResource("3_wseqo")
region = Rect2(640, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_u64gs"]
atlas = ExtResource("3_wseqo")
region = Rect2(800, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_n58pw"]
atlas = ExtResource("5_cgt00")
region = Rect2(0, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlxhv"]
atlas = ExtResource("5_cgt00")
region = Rect2(160, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhnbf"]
atlas = ExtResource("5_cgt00")
region = Rect2(320, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhwd5"]
atlas = ExtResource("5_cgt00")
region = Rect2(480, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_f84u0"]
atlas = ExtResource("5_cgt00")
region = Rect2(0, 800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2coq"]
atlas = ExtResource("5_cgt00")
region = Rect2(160, 800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ansab"]
atlas = ExtResource("5_cgt00")
region = Rect2(320, 800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqoat"]
atlas = ExtResource("5_cgt00")
region = Rect2(480, 800, 160, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_jhcdv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2op1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l2up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8c4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg1ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7ofi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh1xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jmu8")
}],
"loop": false,
"name": &"attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ms1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oojpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ohph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1gs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx8fb")
}],
"loop": false,
"name": &"attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_860u1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_noaea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi56v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jif1")
}],
"loop": true,
"name": &"block",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp83o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jllmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vfo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlb02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i24l4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjvn2")
}],
"loop": false,
"name": &"flip_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1835")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8sev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqq4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sgd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7txfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwxem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fppm")
}],
"loop": false,
"name": &"flip_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppq0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jer86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omh12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8yk8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vw2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wggi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6w28w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrt1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di0kb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jo46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvpw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtcbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lclh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rv8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knyoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u64gs")
}],
"loop": false,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n58pw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlxhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhnbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhwd5")
}],
"loop": true,
"name": &"stun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f84u0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2coq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ansab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqoat")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hch7y"]
size = Vector2(25, 45.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4y4m"]
size = Vector2(24, 42.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xotkn"]
size = Vector2(59.5, 72)

[node name="Character" type="CharacterBody2D"]
script = ExtResource("1_t3rb3")
attack_data_file = "res://config/characters_frame_data/zidane.json"

[node name="Animations" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -40)
sprite_frames = SubResource("SpriteFrames_jhcdv")
animation = &"attack1"
autoplay = "idle"

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -23)
shape = SubResource("RectangleShape2D_hch7y")

[node name="hurtbox" type="Area2D" parent="."]

[node name="collider" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-1, -21.75)
shape = SubResource("RectangleShape2D_j4y4m")

[node name="hitboxes" type="Area2D" parent="."]

[node name="slash_hitbox1" type="CollisionShape2D" parent="hitboxes"]
position = Vector2(50, -29)
shape = SubResource("RectangleShape2D_xotkn")

[node name="slash_hitbox2" type="CollisionShape2D" parent="hitboxes"]
position = Vector2(40, -46)
shape = SubResource("RectangleShape2D_xotkn")

[node name="sound" type="Node" parent="."]

[node name="hit1" type="AudioStreamPlayer2D" parent="sound"]
stream = ExtResource("7_7aj4a")

[node name="swing" type="AudioStreamPlayer2D" parent="sound"]
stream = ExtResource("5_huqtv")

[node name="block" type="AudioStreamPlayer2D" parent="sound"]
stream = ExtResource("6_wpehk")

[node name="hit2" type="AudioStreamPlayer2D" parent="sound"]
stream = ExtResource("4_7ve4u")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("8_plq82")
starting_state = NodePath("CharacterStateIdle")

[node name="CharacterStateIdle" type="Node" parent="StateMachine"]
script = ExtResource("9_kp4xi")

[node name="CharacterStateWalk" type="Node" parent="StateMachine"]
script = ExtResource("10_c1ka5")

[node name="CharacterStateJump" type="Node" parent="StateMachine"]
script = ExtResource("11_2r3eh")

[node name="CharacterStateBlock" type="Node" parent="StateMachine"]
script = ExtResource("12_4nn4g")

[node name="CharacterStateAttack" type="Node" parent="StateMachine"]
script = ExtResource("13_1hpw7")

[node name="CharacterStateStun" type="Node" parent="StateMachine"]
script = ExtResource("14_iqjit")
